# tracing-honeycomb

tracing-distributed/: Cargo.toml
tracing-honeycomb/: Cargo.toml
tracing-honeycomb/src/: trace_id.rs
