[package]
name = "tracing-honeycomb"
version = "0.4.3"
authors = [
    "Inanna Malick <inanna@recursion.wtf>",
    "Jeremiah Senkpiel <fishrock123@rocketmail.com>"
]
edition = "2018"
description = "Honeycomb.io tracing layer for multiprocess telemetry"
repository = "https://github.com/eaze/tracing-honeycomb"
keywords = ["tracing", "honeycomb", "instrumentation"]
license = "MIT"
readme = "README.md"

[features]
use_parking_lot = ["parking_lot", "tracing-distributed/use_parking_lot"]

[dependencies]
tracing = "0.1.12"
tracing-core = "0.1.9"
tracing-distributed =  { path = "../tracing-distributed", version = ">= 0.3, < 0.5" }
libhoney-rust = { git = "https://github.com/nlopes/libhoney-rust", rev = "f64def9dad3523866be429866fa2821d8b0e21ad" }
#libhoney-rust = "0.1.6"
rand = "0.8"
chrono = "0.4"
parking_lot = { version = "0.12", optional = true }
uuid = { version = "1", features = ["v4"] }
sha-1 = "0.10"
serde = "1"
serde_json = "1"

[dev-dependencies]
tracing-attributes = "0.1.5"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
tracing-subscriber = "0.3.0"
tokio = { version = "1", features = ["full"] }
tracing-futures = "0.2.1"
proptest = "1.0"
